// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/gitlab/gl-got-wrapper attempts to paginate 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "gitlab.com",
      "private-token": "abc123",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/some-url",
  },
]
`;

exports[`platform/gitlab/gl-got-wrapper paginates 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "gitlab.com",
      "private-token": "abc123",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/some-url",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "gitlab.com",
      "private-token": "abc123",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/some-url&page=2",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "gitlab.com",
      "private-token": "abc123",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/some-url&page=3",
  },
]
`;

exports[`platform/gitlab/gl-got-wrapper posts 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "gitlab.com",
      "private-token": "abc123",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "POST",
    "url": "https://gitlab.com/api/v4/some-url",
  },
]
`;
